--- a/about.html
+++ b/about.html
@@ -7,11 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>about.us</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        #myTopnav {
+            text-align: right;
+        }
+    </style>
+    <div class="topnav" id="myTopnav">
+        <a href="match" id="head2">MATCH</a>
+        <a href="#maker" id="head3">maker</a>
+        <a href="#home" class="active">Home</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </div>
 </head>
 
 <body>
-
+    <div>
+        <h3>About us</h3>
+    </div>
+    <div>
+        <p>Match Maker Site is a place where your friendship fantacies are fullfilled.<br>
+            With the Match Mkaer site you are able to find yourself a friend who matches your energy and the same hobies
+            just like you!<br>
+            As a team we are dedicated to providing our services to the best of our ability.
+        </p>
+        <p>
+            Kindly share with us and your views or feedback based on your experience from the site.
+        </p>
+        <p>
+            Feel free to also share with us any suggestions of improvements that you think that can be done for better
+            experince.
+        </p>
+    </div>
 </body>
 
 </html>
