--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
         <h3>About us</h3>
     </div>
     <div>
-        <p>Match Maker Site is a place where your friendship fantacies are fullfilled.<br>
-            With the Match Mkaer site you are able to find yourself a friend who matches your energy and the same hobies
+        <p>Match Maker Site is a place where you find just the perfect friend for yourself!<br>
+            With the Match Maker site you are able to find yourself a friend who matches your energy and the same hobies
             just like you!<br>
             As a team we are dedicated to providing our services to the best of our ability.
         </p>
@@ -46,16 +46,20 @@
         </p>
     </div>
     <form id="feedback">
+        <label for="text"><b>Name</b></label>
+        <br>
         <input type="text" placeholder="Kindly Enter Your Name" autocomplete="off" id="name" class="mr-5 pb-1 pt-1"
-        name="name" required>
-    <input type="text" id="email" placeholder="Kindly Enter Your Email" autocomplete="off"
-        class="ml-4 pb-1 pt-1" value="" name="EMAIL"
-        pattern="[A-Za-z0-9._%+-]{2,}@[a-zA-Z]{1,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})"
-        required>
-    <br><br>
-    <textarea cols="49" rows="10" id="textarea1" placeholder="Feedback"
-        name="message1" required></textarea><br>
-    <button type="submit" onclick="validation()">SUBMIT</button>
+            name="name" required>
+        <br>
+        <label for="text"><b>Email</b></label><br>
+        <input type="text" id="email" placeholder="Kindly Enter Your Email" autocomplete="off" class="ml-4 pb-1 pt-1"
+            value="" name="EMAIL"
+            pattern="[A-Za-z0-9._%+-]{2,}@[a-zA-Z]{1,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})"
+            required>
+        <br><br>
+        <label for="textarea"><b>Message</b></label><br>
+        <textarea cols="49" rows="10" id="textarea1" placeholder="Feedback" name="message1" required></textarea><br>
+        <button type="submit" onclick="validation()">SUBMIT</button>
     </form>
 </body>
 
