--- a/generator.html
+++ b/generator.html
@@ -38,6 +38,22 @@
                 <input type="radio" name="interest" id="music" value="Music">
                 <label for="music">Music</label>
             </div>
+            <div class="books">
+                <input type="radio" name="interest" id="books" value="Books">
+                <label for="books">books</label>
+            </div>
+            <div class="art">
+                <input type="radio" name="interest" id="art" value="art">
+                <label for="art">Art</label>
+            </div>
+            <div class="driving">
+                <input type="radio" name="interest" id="driving" value="driving">
+                <label for="driving">Driving</label>
+            </div>
+            <div class="fasion">
+                <input type="radio" name="interest" id="fasion" value="fasion">
+                <label for="fasion">Fasion</label>
+            </div>
             </div>
         </div>
     </div>
