--- a/generator.html
+++ b/generator.html
@@ -23,35 +23,35 @@
         </div>
         <div class="card-content">
             <div class="trav">
-                <input type="radio" name="interest" id="trav" value="Traveling">
+                <input type="checkbox" name="interest" id="trav" value="Traveling">
                 <label for="travelling">Travelling</label>
             </div>
             <div class="sports">
-                <input type="radio" name="interest" id="sports" value="Sports">
+                <input type="checkbox" name="interest" id="sports" value="Sports">
                 <label for="sport">Sports</label>
             </div>
             <div class="dancing">
-                <input type="radio" name="interest" id="dancing" value="Dancing">
+                <input type="checkbox" name="interest" id="dancing" value="Dancing">
                 <label for="dancing">Dancing</label>
             </div>
             <div class="music">
-                <input type="radio" name="interest" id="music" value="Music">
+                <input type="checkbox" name="interest" id="music" value="Music">
                 <label for="music">Music</label>
             </div>
             <div class="books">
-                <input type="radio" name="interest" id="books" value="Books">
+                <input type="checkbox" name="interest" id="books" value="Books">
                 <label for="books">books</label>
             </div>
             <div class="art">
-                <input type="radio" name="interest" id="art" value="art">
+                <input type="checkbox" name="interest" id="art" value="art">
                 <label for="art">Art</label>
             </div>
             <div class="driving">
-                <input type="radio" name="interest" id="driving" value="driving">
+                <input type="checkbox" name="interest" id="driving" value="driving">
                 <label for="driving">Driving</label>
             </div>
             <div class="fasion">
-                <input type="radio" name="interest" id="fasion" value="fasion">
+                <input type="checkbox" name="interest" id="fasion" value="fasion">
                 <label for="fasion">Fasion</label>
             </div>
             </div>
