edited placeholder labels for the form

--- a/about.html
+++ b/about.html
@@ -48,11 +48,11 @@
     <form id="feedback">
         <label for="text"><b>Name</b></label>
         <br>
-        <input type="text" placeholder="Kindly Enter Your Name" autocomplete="off" id="name" class="mr-5 pb-1 pt-1"
+        <input type="text" placeholder="Name" autocomplete="off" id="name" class="mr-5 pb-1 pt-1"
             name="name" required>
         <br>
         <label for="text"><b>Email</b></label><br>
-        <input type="text" id="email" placeholder="Kindly Enter Your Email" autocomplete="off" class="ml-4 pb-1 pt-1"
+        <input type="text" id="email" placeholder="Email" autocomplete="off" class="ml-4 pb-1 pt-1"
             value="" name="EMAIL"
             pattern="[A-Za-z0-9._%+-]{2,}@[a-zA-Z]{1,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})"
             required>
