--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
 
 <body>
     <div>
-        <h3>About us</h3>
+        <h3 id="about">About us</h3>
     </div>
-    <div>
+    <div id="para1">
         <p>Match Maker Site is a place where you find just the perfect friend for yourself!<br>
             With the Match Maker site you are able to find yourself a friend who matches your energy and the same hobies
             just like you!<br>
