--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
 
 <body>
     <div>
+        <h3 id="about">About us</h3>
+    </div>
+    <div id="para1">
         <h3>About us</h3>
     </div>
     <div>
