--- a/generator.html
+++ b/generator.html
@@ -22,35 +22,35 @@
             <h4>Intrests</h4>
         </div>
         <div class="card-content">
-            <div class="trav">
+            <div >
                 <input type="checkbox" name="interest" id="trav" value="Traveling">
                 <label for="travelling">Travelling</label>
             </div>
-            <div class="sports">
+            <div >
                 <input type="checkbox" name="interest" id="sports" value="Sports">
                 <label for="sport">Sports</label>
             </div>
-            <div class="dancing">
+            <div> 
                 <input type="checkbox" name="interest" id="dancing" value="Dancing">
                 <label for="dancing">Dancing</label>
             </div>
-            <div class="music">
+            <div >
                 <input type="checkbox" name="interest" id="music" value="Music">
                 <label for="music">Music</label>
             </div>
-            <div class="books">
+            <div>
                 <input type="checkbox" name="interest" id="books" value="Books">
                 <label for="books">books</label>
             </div>
-            <div class="art">
+            <div>
                 <input type="checkbox" name="interest" id="art" value="art">
                 <label for="art">Art</label>
             </div>
-            <div class="driving">
+            <div>
                 <input type="checkbox" name="interest" id="driving" value="driving">
                 <label for="driving">Driving</label>
-            </div>
-            <div class="fasion">
+            </div> 
+            <div>
                 <input type="checkbox" name="interest" id="fasion" value="fasion">
                 <label for="fasion">Fasion</label>
             </div>
