--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
         </p>
     </div>
     <form id="feedback">
+        <div id="flex1">
         <label for="text"><b>Name</b></label>
         <br>
         <input type="text" placeholder="Name" autocomplete="off" id="name" class="mr-5 pb-1 pt-1"
@@ -56,6 +57,7 @@
             value="" name="EMAIL"
             pattern="[A-Za-z0-9._%+-]{2,}@[a-zA-Z]{1,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})"
             required>
+            </div>
         <br><br>
         <label for="textarea"><b>Message</b></label><br>
         <textarea cols="49" rows="10" id="textarea1" placeholder="Feedback" name="message1" required></textarea><br>
