put the about explanation in one paragraph

--- a/about.html
+++ b/about.html
@@ -36,28 +36,25 @@
             With the Match Maker site you are able to find yourself a friend who matches your energy and the same hobies
             just like you!<br>
             As a team we are dedicated to providing our services to the best of our ability.
-        </p>
-        <p>
+            <br>
             Kindly share with us and your views or feedback based on your experience from the site.
-        </p>
-        <p>
             Feel free to also share with us any suggestions of improvements that you think that can be done for better
             experince.
         </p>
     </div>
     <form id="feedback">
         <div id="flex1">
-        <label for="text"><b>Name</b></label>
-        <br>
-        <input type="text" placeholder="Name" autocomplete="off" id="name" class="mr-5 pb-1 pt-1"
-            name="name" required>
-        <br>
-        <label for="text"><b>Email</b></label><br>
-        <input type="text" id="email" placeholder="Email" autocomplete="off" class="ml-4 pb-1 pt-1"
-            value="" name="EMAIL"
-            pattern="[A-Za-z0-9._%+-]{2,}@[a-zA-Z]{1,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})"
-            required>
-            </div>
+            <label for="text"><b>Name</b></label>
+            <br>
+            <input type="text" placeholder="Name" autocomplete="off" id="name" class="mr-5 pb-1 pt-1" name="name"
+                required>
+            <br>
+            <label for="text"><b>Email</b></label><br>
+            <input type="text" id="email" placeholder="Email" autocomplete="off" class="ml-4 pb-1 pt-1" value=""
+                name="EMAIL"
+                pattern="[A-Za-z0-9._%+-]{2,}@[a-zA-Z]{1,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})"
+                required>
+        </div>
         <br><br>
         <label for="textarea"><b>Message</b></label><br>
         <textarea cols="49" rows="10" id="textarea1" placeholder="Feedback" name="message1" required></textarea><br>
