--- a/generator.html
+++ b/generator.html
@@ -12,6 +12,7 @@
       <p>Match Maker wants you to make great friends as fast as possible<br>All you have to do is write both of your names in the space provided<br>
     Click on your intrests and leave your disintrests blank
 <br>submit your progress</p>
+<h2>Please note that you can only click <strong>four</strong> checkboxes</h2>
 <form>
     <h3>FIRST NAME</h3>
     <input type="text" class="fname" placeholder="Enter First Name:">
