--- a/generator.html
+++ b/generator.html
@@ -8,6 +8,16 @@
 
 </head>
 <body>
+    <div class="topnav" id="myTopnav">
+        <a href="match" id="head2">MATCH</a>
+        <a href="#maker" id="head3">maker</a>
+        <a href="#home" class="active">Home</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </div>
       <h1>HOW TO MATCH</h1>
       <p>Match Maker wants you to make great friends as fast as possible<br>All you have to do is write both of your names in the space provided<br>
     Click on your intrests and leave your disintrests blank
