--- a/generator.html
+++ b/generator.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generator</title>
-
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <div class="topnav" id="myTopnav">
@@ -51,7 +51,7 @@
             </div>
             <div>
                 <input type="checkbox" name="interest" id="books" value="Books">
-                <label for="books">books</label>
+                <label for="books">Books</label>
             </div>
             <div>
                 <input type="checkbox" name="interest" id="art" value="art">
@@ -63,7 +63,7 @@
             </div> 
             <div>
                 <input type="checkbox" name="interest" id="fasion" value="fasion">
-                <label for="fasion">Fasion</label>
+                <label for="fasion">Fashion</label>
             </div>
             </div>
         </div>
