added front page text

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <img src="../images/diverse-friends-students-shoot.jpg" height=100% width="100%">
             <div class="centered">
            <h1>Make a wish & we fulfill it<br> For you <!DOCTYPE html>
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> Iste eos fugiat accusamus similique excepturi<br> aspernatur accusantium magni, nihil impedit soluta porro <br>fugit laboriosam, velit, dolor inventore. Eligendi,<br> unde? Dolorum, iure.
+           <p>Sometimes though true friendship seems to be a <br> mile away it could be simply a click away<br> By using matchmaker you can easily find a friend whose <br> interests match yours hence creating an everlasting bond of friendship. <br> Good luck!!!
            <form>
-            <button type="reset" value="Reset">FIND YOUR MATCH </button>
+          <button>FIND YOUR MATCH</button>  
         </form>
     
         
