linked about page to generator page

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>about.us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="generator.html">
     <style>
         #myTopnav {
             text-align: right;
@@ -28,9 +29,6 @@
 </head>
 
 <body>
-    <div>
-        <h3 id="about">About us</h3>
-    </div>
     <div id="para1">
         <h3>About us</h3>
     </div>
