--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <html lang="en">
+            <link rel="stylesheet" href="./assets/css/style.css">
         <title>Document</title>
     </head>
     <body>
@@ -20,4 +21,3 @@
         
     </body>
     </html>
-    
