--- a/generator.html
+++ b/generator.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="topnav" id="myTopnav">
-        <a href="" id="head2"><img src="./assets/img/logo.svg"></a>
-        <a href="#maker" id="head3">maker</a>
-        <a href="#home" class="active">Home</a>
-        <a href="">Contact</a>
-        <a href="./about.html">About</a>
+        <a href="./index.html" id="head2"><img src="./assets/img/logo.svg"></a>
+                <a href="./generator.html" id="head3">maker</a>
+                <a href="#home" class="active">Home</a>
+                <a href="#contact">Contact</a>
+                <a href="./about.html">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
