--- a/generator.html
+++ b/generator.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generator</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <style>
+        #myTopnav {
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
     <div class="topnav" id="myTopnav">
