--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
     </head>
     <body>
         <div class="container">
-            <img src="./assets/img/diverse-friends-students-shoot.jpg" height=100% width="100%">
             <div class="centered">
            <h1>Make a wish & we fulfill it<br> For you <!DOCTYPE html>
-           <p>Sometimes though true friendship seems to be a <br> mile away it could be simply a click away<br> By using matchmaker you can easily find a friend whose <br> interests match yours hence creating an everlasting bond of friendship. <br> Good luck!!!
+           <div>Sometimes though true friendship seems to be a <br> mile away it could be simply a click away<br> By using matchmaker you can easily find a friend whose <br> interests match yours hence creating an everlasting bond of friendship. <br> Good luck!!!
            <form>
           <button>FIND YOUR MATCH</button>  
         </form>
-    
+    </div>
         
     </body>
     </html>
