--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <html lang="en">
             <link rel="stylesheet" href="./assets/css/style.css">
-
-            <div class="topnav" id="myTopnav">
-                <a href="./index.html" id="head2"><img src="./assets/img/logo.svg"></a>
-                <a href="./generator.html" id="head3">maker</a>
-                <a href="#home" class="active">Home</a>
-                <a href="#contact">Contact</a>
-                <a href="./about.html">About</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
-                </a>
-            </div>
         <title>Document</title>
+        <style>
+            #myTopnav {
+                text-align: right;
+            }
+        </style> 
     </head>
     <body>
+        <div class="topnav" id="myTopnav">
+            <a href="./index.html" id="head2"><img src="./assets/img/logo.svg"></a>
+            <a href="./generator.html" id="head3">maker</a>
+            <a href="#home" class="active">Home</a>
+            <a href="#contact">Contact</a>
+            <a href="./about.html">About</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </div>
         <div class="container">
             <div class="centered">
            <h1>Make a wish & we fulfill it<br> For you <!DOCTYPE html>
