added link to cta

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div class="centered">
            <h1>Make a wish & we fulfill it<br> For you <!DOCTYPE html>
            <div>Sometimes though true friendship seems to be a <br> mile away it could be simply a click away<br> By using matchmaker you can easily find a friend whose <br> interests match yours hence creating an everlasting bond of friendship. <br> Good luck!!!
-           <form>
-          <button>FIND YOUR MATCH</button>  
-        </form>
+        <div class="gen-btn">
+          <a href="./generator.html"><button>FIND YOUR MATCH</button></a>
+        </div>
     </div>
         
     </body>
