adding alert on the about page

--- a/about.html
+++ b/about.html
@@ -92,7 +92,9 @@
         required
       ></textarea
       ><br />
-      <button type="submit" onclick="validation()">SUBMIT</button>
+      <button type="submit" onclick="about()">SUBMIT</button>
     </form>
+
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
