--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="generator.html" />
     <style>
       #myTopnav {
-        text-align: right;
+        text-align: left;
       }
     </style>
   </head>
