--- a/generator.html
+++ b/generator.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <style>
       #myTopnav {
-        text-align: right;
+        text-align: left;
       }
     </style>
   </head>
