--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Document</title>
         <style>
             #myTopnav {
-                text-align: right;
+                text-align: left;
             }
         </style> 
     </head>
